# rag-excel

./: 0702763-79.2024.8.07.0014_0001.txt  A.md  Modelfile  campos_extract.py  chat-excel.html  extracao.py  index.html  intercredis_remessa_expressa_CCF.txt  intercredis_remessa_expressa_Chamados.txt  intercredis_remessa_expressa_Mecanismo_Contábil.txt  intercredis_remessa_expressa_Relatório_Controladoria.txt  intercredis_remessa_expressa_Relatório_Contábil.txt  intercredis_remessa_expressa_Tabela_CR1.txt  intercredis_remessa_expressa_Tabela_KM1.txt  intercredis_remessa_expressa_Tratamentos.txt  mark.py  pyproject.toml  tools.py
app/: main.py  models.py  utils.py
app/api/: main.py
app/api/routes/: chat.py  data_analysis.py  files.py  ollama.py
app/cleaner/: agrupador_paragrafos_cleaner.py  cleaner_base.py  helper.py
app/extractors/: pdf_to_text.py
app/services/: data_analysis_service.py  file_service.py  prompt_service.py
app/templates/: prompts.yaml
app/uploaded_files/: Pades_CREDIPEU370.949_001.txt  intercredis_remessa_expressa_ccf.csv  intercredis_remessa_expressa_chamados.csv  intercredis_remessa_expressa_mecanismo_contbil.csv  intercredis_remessa_expressa_relatrio_contbil.csv  intercredis_remessa_expressa_relatrio_controladoria.csv  intercredis_remessa_expressa_tabela_cr1.csv  intercredis_remessa_expressa_tabela_km1.csv  intercredis_remessa_expressa_tratamentos.csv
